--- a/Python_Strings.ipynb
+++ b/Python_Strings.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMQbXbcrdSv5lOxyYpI588T",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/datascience-1100/Python-String/blob/main/Python_Strings.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 3,
@@ -69,7 +81,7 @@
       "cell_type": "code",
       "source": [
         "# Positive Indexing\n",
-        "mystring"
+        "mystring= str"
       ],
       "metadata": {
         "id": "H_v7D5SetAh7"
